--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,259 +1,130 @@
-.general-container {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: var(--colorSecundario);
-  padding: 40px 0;
-  border-radius: 5px;
-
-  @media (max-width: 820px) {
-    width: 100%;
-    padding: 20px 0 0;
+.product-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 20px;
 }
 
-  @media (max-width: 640px) {
-    width: 100%;
-    margin: 0 auto;
+.product-images-sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-  .principal-container {
-    display: grid;
-    grid-template-columns: 70% 30%;
-    font-family: var(--fuentePrincipal);
-    padding: 0 0 30px;
-
-    @media (max-width: 890px) {
-        margin: 0 10px;
-    }
-
-    @media (max-width: 640px) {
-        grid-template-columns: 100%;
-        margin: 0;
-    }
-
-    .main-image-container {
-      display: flex;
-      justify-content: center;
-
-
-      .main-image {
-
-        .principal-image {
-          box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-          transition: ease-in-out 0.5s;
-        }
-
-        img {
-          width: 700px;
-          border-radius: 7px;
-
-
-          @media (max-width: 820px) {
-              width: 450px;
-          }
-
-          @media (max-width: 640px) {
-              width: 400px;
-          }
-        }
-
-        .thumbnails {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-evenly;
-          position: absolute;
-          top: 270px;
-          align-items: center;
-          margin: 0 10px 0;
-
-          @media (max-width: 890px) {
-            top: 250px;
-        }
-
-          @media (max-width: 640px) {
-            top: 230px;
-        }
-
-          .thumbnail {
-            border-radius: 7px;
-            margin: 0 0 12px;
-            transition: ease 0.3s;
-            border: 1px solid gray;
-            cursor: pointer;
-
-            img {
-              width: 70px;
-
-              @media (max-width: 890px) {
-                  width: 60px;
-              }
-
-              @media (max-width: 640px) {
-                  width: 50px;
-              }
-            }
-
-          }
-
-          .selected {
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            transform: scale(1.08);
-            border: 1px solid black;
-          }
-
-        }
-      }
-
-
-    }
-
-    .product-details-container {
-      padding: 0 60px 0 0;
-
-      @media (max-width: 890px) {
-        padding: 0 30px 0 0;
-      }
-
-      @media (max-width: 640px) {
-        padding: 30px;
-      }
-
-      .product-details {
-
-        .brand-name {
-
-          p {
-            text-transform: uppercase;
-            font-weight: 900;
-            font-size: 20px;
-            margin: 0;
-          }
-        }
-
-        .product-name{
-
-          h2 {
-            font-size: 30px;
-            margin: 0;
-            font-weight: 700;
-            text-transform: uppercase;
-          }
-        }
-
-        .category {
-
-          p {
-            color: gray;
-            margin: 0 0 15px;
-          }
-
-        }
-
-        .price {
-
-          h3 {
-            margin: 0;
-            font-weight: 700;
-          }
-        }
-
-        .colors {
-          display: flex;
-          align-items: center;
-
-          h4 {
-            margin: 0;
-            font-size: 15px;
-            text-transform: uppercase;
-            font-weight: 700;
-          }
-
-          p {
-            margin: 0;
-            margin: 0 0 0 5px;
-          }
-        }
-
-        .color {
-          display: inline-block;
-          margin: 10px 10px 20px 0;
-          cursor: pointer;
-          width: 30px;
-          height: 30px;
-
-
-          .color-box {
-            border-radius: 50%;
-            width: 28px;
-            height: 28px;
-            display: inline-block;
-            cursor: pointer;
-            border: 2px solid transparent;
-            transition: ease-out 0.3s;
-
-            &.selected {
-              box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-              border: 3px solid white;
-            }
-          }
-
-        }
-      }
-    }
-
-    .btns-container {
-      border-top: 1px solid gray;
-
-      .btn-cart-container {
-        margin: 0 0 6px;
-
-        .btn-cart {
-          border: none;
-          padding: 10px;
-          width: 300px;
-          text-transform: capitalize;
-          background-color: var(--colorPrimario);
-          color: white;
-          border-radius: 5px;
-          margin: 10px 0 0;
-
-          @media (max-width: 890px) {
-            width: 210px;
-          }
-
-          @media (max-width: 640px) {
-            width: 370px;
-            height: 60px;
-            font-size: 23px;
-          }
-        }
-      }
-
-      .btn-like-container {
-
-        .btn-like {
-          border: none;
-          padding: 10px;
-          width: 300px;
-          text-transform: capitalize;
-          background-color: transparent;
-          color: var(--colorPrimario);
-          border: 1px solid var(--colorPrimario);
-          border-radius: 5px;
-
-          @media (max-width: 890px) {
-            width: 210px;
-          }
-
-          @media (max-width: 640px) {
-            width: 370px;
-            height: 60px;
-            font-size: 23px;
-          }
-        }
-      }
-    }
-  }
-
-
+.product-images-sidebar .thumbnail {
+  cursor: pointer;
 }
 
+.product-images-sidebar .thumbnail img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border: 2px solid transparent;
+}
+
+.product-images-sidebar .thumbnail img.selected {
+  border-color: black;
+}
+
+.product-image-main {
+  flex-grow: 1;
+}
+
+.product-image-main img {
+  width: 500px;
+  height: auto;
+}
+
+.product-info {
+  max-width: 300px;
+}
+
+.product-info h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.price {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.description {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.color-options, .size-options {
+  margin-bottom: 20px;
+}
+
+.colors, .sizes {
+  display: flex;
+  gap: 10px;
+}
+
+.color, .size {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  text-align: center;
+  line-height: 30px;
+}
+
+.color.selected, .size.selected {
+  border-color: black;
+}
+
+.size-guide {
+  display: block;
+  margin-top: 10px;
+  text-decoration: underline;
+  cursor: pointer;
+  color: blue;
+}
+
+.action-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.add-to-bag, .add-to-wishlist {
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.add-to-bag {
+  background-color: black;
+  color: white;
+}
+
+.add-to-wishlist {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.additional-info {
+  margin-top: 20px;
+}
+
+.info-tab {
+  margin-bottom: 10px;
+}
+
+.info-tab h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.info-tab p {
+  font-size: 14px;
+  color: #666;
+}
