--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif; /* Reemplaza 'Roboto' con el nombre de tu fuente */
-    font-weight: 500;
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 500 !important;
+
+  p {
+    font-weight: 400;
+  }
 }
+body.no-scroll {
+  overflow: hidden;
+}
+
 
 :root {
 
   --colorPrimario: #0F151B;
   --colorSecundario: #F5F5F5;
 
-  --fuentePrincipal: 'Outfit', sans-serif;
 
 }
 
