--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
         <h5 class="mb-4">Contacto</h5>
-        <p><i class="fas fa-envelope me-2"></i>romancillostore@mail.com</p>
+        <p><i class="fas fa-envelope me-2"></i>romancillostore&#64;mail.com</p>
         <p><i class="fas fa-phone me-2"></i>+52 (669) 322 1234</p>
         <p><i class="fas fa-map-marker-alt me-2"></i>Av. Silvia Abreu, Edificio Los Delfines, Piso 2, Mazatlán, Sinaloa, México 8185</p>
       </div>
@@ -20,9 +20,9 @@
         <h5 class="mb-4">Síguenos</h5>
         <ul class="list-unstyled">
           <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-facebook-f me-2"></i>Romancillo Store Official</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-twitter me-2"></i>@romancillostore</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-instagram me-2"></i>@romancillostore</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-tiktok me-2"></i>@romancillostore</a></li>
+          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-twitter me-2"></i>&#64;romancillostore</a></li>
+          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-instagram me-2"></i>&#64;romancillostore</a></li>
+          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-tiktok me-2"></i>&#64;romancillostore</a></li>
         </ul>
       </div>
       <div class="col-lg-2 col-md-6">
