--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,55 +1,34 @@
-<body>
-  <header class="home">
-    <!-- Contenido del header aquí -->
-  </header>
-  <div class="image-container-main1">
-    <img src="assets/img/palm-angels-banner.jpg" alt="Descripción de la imagen">
-    <p class="text-image">Palm Angels</p>
-    <button class="image-button">VER MÁS</button>
-  </div>
-  <div class="container">
-    <div class="main-image">
-      <img src="assets/img/palm-angels-logo-hoodie_22030545_52306842_800.jpg" alt="Imagen principal">
-    </div>
-    <div class="product-grid">
-      <div class="product" *ngFor="let product of products" (click)="navigateToProduct(product.id)">
-        <div class="image-container">
-          <img [src]="product.images[0]" alt="Producto" class="principal-image">
-          <img [src]="product.images[1]" alt="Producto" class="hover-image">
+<div class="brands">
+  <div class="brands-container" *ngFor="let brand of brands">
+    <div class="brand">
+      <div class="image-container">
+        <img [src]="getBrandsBannerImageUrl(brand)" [alt]="brand.name">
+        <div class="overlay"></div>
+        <div class="brand-info">
+          <p class="brand-name">{{ brand.name }}</p>
+          <button class="view-more-button" (click)="navigateToBrand(brand.id)">Ver más</button>
         </div>
-        <p>{{ product.name }}</p>
-        <p class="price">${{ product.price | number }}</p>
+      </div>
+    </div>
+    <div class="brand-products-container">
+      <div class="image-product-brand">
+        <img [src]="getBrandsImageUrl(brand)" [alt]="brand.name">
+      </div>
+      <div class="products-container">
+        <div class="product" *ngFor="let product of brand.products">
+          <div class="product-img"
+               (mouseenter)="onMouseEnter(product)"
+               (mouseleave)="onMouseLeave(product)">
+            <img [src]="product.currentImageUrl" [alt]="product.name">
+          </div>
+          <div class="product-name">
+            <h4>{{ product.name }}</h4>
+          </div>
+          <div class="product-price">
+            <p>{{ product.price | currency }}</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <!-- Repite la estructura anterior para otras secciones y productos -->
-  <div class="info-banner">
-    <div class="info-item">
-      <div class="icon-info">
-        <fa-icon [icon]="faCreditCard"></fa-icon>
-      </div>
-      <div class="info-text">
-        <h3>ACEPTAMOS</h3>
-        <p>PAGOS CON TARJETA, TRANSFERENCIA ELECTRONICA Y DEPOSITOS BANCARIOS.</p>
-      </div>
-    </div>
-    <div class="info-item">
-      <div class="icon-info2">
-        <fa-icon [icon]="faDollarSign"></fa-icon>
-      </div>
-      <div class="info-text">
-        <h3>¿NO TIENES TARJETA?</h3>
-        <p>ACEPTAMOS PAGOS EN EFECTIVOS Y DEPOSITOS BANCARIOS.</p>
-      </div>
-    </div>
-    <div class="info-item">
-      <div class="icon-info">
-        <fa-icon [icon]="faTruckFast"></fa-icon>
-      </div>
-      <div class="info-text">
-        <h3>ENVIOS A TODO MÉXICO</h3>
-        <p>Regular (3-5 días) $199</p>
-      </div>
-    </div>
-  </div>
-</body>
+</div>
