--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="text-content text-center d-none d-md-block">
-  <h2>Free shipping on purchases of $999 MXN!</h2>
+<div class="text-content">
+  <h2>Free shipping on purchases of $150 usd</h2>
 </div>
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid contenedor-general">
@@ -13,7 +13,7 @@
         <i class="fas fa-shopping-cart"></i>
       </div>
       <div class="heart-icon" routerLink="/wishlist">
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart"></i>
       </div>
       <button class="bars-btn d-lg-none" type="button" (click)="toggleSideMenu()">
         <i class="fas fa-bars"></i>
@@ -21,8 +21,8 @@
     </div>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a routerLink="/login" class="nav-link">Login</a>
+        <li class="nav-item user-icon">
+          <a routerLink="/login" class="nav-link"><i class="fas fa-user"></i></a>
         </li>
       </ul>
       <form class="d-flex d-lg-none">
