--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,34 +1,12 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body {
-  font-family: 'Roboto', sans-serif !important;
-  font-weight: 500 !important;
-
-  p {
-    font-weight: 400;
-  }
-}
-body.no-scroll {
-  overflow: hidden;
-}
-
 
 :root {
+
+  --fuentePrincipal: "Outfit", sans-serif;
+  --fuenteSecundaria: "Heebo", sans-serif;
 
   --colorPrimario: #0F151B;
   --colorSecundario: #F5F5F5;
 
 
 }
-
-.contenedor-general {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-
-
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
