Fix: 'HomeComponent' Responsives View!

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="background-image"></div>
   <div class="contenido">
     <div class="branding-logo">
-      <img src="../../assets/img/logos/logo3.png" alt="Logo del Branding">
+      <img src="../../assets/img/logos/border-logo.png" alt="Logo del Branding">
     </div>
     <h2 class="login-title mt-4 mb-4 text-center fw-bold">Inicia Sesión</h2>
     <div class="login-container">
