--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -28,6 +28,7 @@
 
     .login-title {
       margin-bottom: 20px;
+      font-family: var(--fuentePrincipal);
 
       @media (max-width: 768px) {
         margin-bottom: 10px;
