--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,43 +3,27 @@
 </div>
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid contenedor-general">
-    <div class="d-flex align-items-center justify-content-between w-100">
-      <div class="navbar-logo">
-        <a routerLink="/" class="nav-link">
-          <img src="../../assets/img/logos/border-logo.png" alt="Logo Negro" />
-        </a>
+    <div class="navbar-logo">
+      <a routerLink="/" class="nav-link">
+        <img src="../../assets/img/logos/border-logo.png" alt="Logo Negro" />
+      </a>
+    </div>
+    <div class="icons-group">
+      <div class="heart-icon" routerLink="/wishlist">
+        <i class="fa-solid fa-heart"></i>
       </div>
       <div class="cart-icon" (click)="toggleCart()">
         <i class="fas fa-shopping-cart"></i>
       </div>
-      <div class="heart-icon" routerLink="/wishlist">
-        <i class="fa-solid fa-heart"></i>
+      <div class="user-icon" routerLink="/login">
+        <i class="fas fa-user"></i>
       </div>
-      <button class="bars-btn d-lg-none" type="button" (click)="toggleSideMenu()">
-        <i class="fas fa-bars"></i>
-      </button>
     </div>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item user-icon">
-          <a routerLink="/login" class="nav-link"><i class="fas fa-user"></i></a>
-        </li>
-      </ul>
-      <form class="d-flex d-lg-none">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Buscar"
-          aria-label="Buscar"
-        />
-        <button class="btn btn-outline-light" type="submit">
-          <i class="fas fa-search"></i>
-        </button>
-      </form>
-    </div>
+    <button class="bars-btn d-lg-none" type="button" (click)="toggleSideMenu()">
+      <i class="fas fa-bars"></i>
+    </button>
   </div>
 </nav>
 
 <app-cart *ngIf="cartService.isCartOpen$"></app-cart>
-
 <app-side-menu *ngIf="sideMenuService.isSideMenuOpen$"></app-side-menu>
