--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -36,6 +36,10 @@
     font-size: 30px;
     margin: 5px 0 20px;
   }
+
+  .cart-title {
+    font-family: var(--fuentePrincipal);
+  }
 }
 
 .close-btn {
