--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,6 +21,10 @@
   img {
     width: 100%;
     display: block;
+
+    @media (max-width: 1023px) {
+        width: 100%;
+    }
   }
 
   .overlay {
@@ -35,19 +39,31 @@
 
   .brand-info {
     position: absolute;
-    top: 48%;
-    left: 20%;
+    top: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
     border-radius: 5px;
     z-index: 2;
 
+    @media (max-width: 767px) {
+        left: 35%;
+    }
+
     p {
       text-transform: uppercase;
       font-family: var(--fuentePrincipal);
       font-weight: 700;
       font-size: 60px;
+
+      @media (max-width: 1023px) {
+        font-size: 50px;
+      }
+
+      @media (max-width: 767px) {
+        font-size: 30px;
+      }
     }
   }
 }
@@ -64,6 +80,10 @@
   transition: transform 0.3s ease, opacity 0.3s ease;
   text-transform: uppercase;
   margin: 20px 0 0;
+
+  @media (max-width: 767px) {
+    margin: 5px 0 0;
+  }
 }
 
 .view-more-button:hover {
@@ -74,15 +94,19 @@
 
 .brand-products-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   margin: 20px 50px;
+
+  @media (max-width: 1023px) {
+    grid-template-columns: 1fr;
+    margin: 10px 20px;
+  }
 
   .image-product-brand {
     display: grid;
 
     img {
       width: 100%;
-      border-radius: 2px;
     }
   }
 
@@ -93,26 +117,28 @@
     gap: 20px;
     margin: 0 0 0 20px;
 
+    @media (max-width: 1023px) {
+      grid-template-columns: repeat(2, 1fr);
+      margin: 20px 0 0 0;
+    }
+
     .product {
       text-align: center;
       cursor: pointer;
 
       .product-img {
         img {
-          width: 220px;
+          width: 100%;
           height: auto;
           transition: transform 0.3s ease, opacity 0.3s ease;
         }
 
         &:hover img {
           transform: scale(1.06);
-          width: 220px;
         }
       }
 
-
       .product-name {
-
         h4 {
           font-family: var(--fuentePrincipal);
           font-weight: 600;
@@ -123,7 +149,7 @@
         margin-top: 5px;
         font-weight: bold;
         font-family: var(--fuentePrincipal);
-        color: green
+        color: green;
       }
     }
   }
